# kinly

./: .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: release.yml
src/: args.rs  config.rs  keypair.rs  lib.rs  logging.rs  main.rs  state.rs
src/http/: mod.rs  state.rs
src/http/dto/: response.rs
src/http/dto/response/: profile.rs
src/http/extractors/: current_server.rs  mod.rs
src/http/routes/: root.rs
src/http/routes/api/: get_profiles_by_usernames.rs  mod.rs
src/http/routes/sessionserver/: get_profile_by_uuid.rs  mapper.rs  mod.rs  player_has_joined.rs
src/launcher/: mod.rs
src/launcher/socket/: mod.rs
src/launcher/types/: response.rs
src/launchserver/: error.rs  mod.rs
src/launchserver/socket/: error.rs  mod.rs  options.rs
src/launchserver/socket/events/: input.rs  output.rs
src/launchserver/types/: request.rs  response.rs
src/routes/: api.rs  assets.rs  mod.rs  root.rs  sessionserver.rs
