[package]
name = "auth-proxy-gl"
version = "0.2.10"
authors = ["IXLShizua"]
edition = "2021"

[dependencies]
axum = "0.7.9"
clap = { version = "4.5.23", features = ["derive"] }
dashmap = "6.1.0"
figment = { version = "0.10.19", features = ["json"] }
futures = "0.3.31"
futures-util = "0.3.31"
kameo = { git = "https://github.com/tqwewe/kameo.git", version = "0.15.0" }
openssl = { version = "0.10.71", features = ["vendored"] }
reqwest = { version = "0.12.14", default-features = false, features = ["native-tls"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tokio-tungstenite = { version = "0.26.0", features = ["native-tls", "url"] }
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
