[package]
name = "auth-proxy-gl"
version = "0.2.10"
authors = ["IXLShizua"]
edition = "2021"

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.46", features = ["derive"] }
dashmap = "6.1.0"
figment = { version = "0.10.19", features = ["json"] }
futures = "0.3.31"
futures-util = "0.3.31"
openssl = { version = "0.10.73", features = ["vendored"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls", "url"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
